Completed Odin Project's intro to CSS exercises utilizing css method, classes, IDs, chaining, and descendant combinators

--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,7 @@
 /* Add CSS Styling */
+
+.Button {font-size: 28px; font-family: Helvetica, 'Times New Roman', sans-serif;}
+
+.ClickMe {background-color: black; color: white;}
+
+.ClickMeInstead {background-color: yellow;}
