--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,9 @@
 /* Add CSS Styling */
+
+.Odd {background-color: pink; color: black; font-family: Verdana, DejaVu Sans, Sans-Serif;}
+
+#Number2 {color: blue; font-size: 36px;}
+
+.Three {font-size: 24px;}
+
+#Number4 {background-color: lightgreen; font-size: 24px; font-weight: bold;}
