--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,27 +1,39 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  font-size: 16px;
 }
 
 .card {
-  width: 400px;
+  width: 600px;
   background: #fff;
   margin: 16px auto;
 }
 
 .title {
   background: #e3f4ff;
+  padding: 16px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 16px;
+  margin-bottom: 16px;
+  font-size: 16px;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
+  font-size: 16px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  padding: 20px;
+  margin: 5px;
+  font-size: 16px;
 }
+
+.button {display: block; text-align: center;}
