--- a/foundations/flex/01-flex-center/style.css
+++ b/foundations/flex/01-flex-center/style.css
@@ -3,6 +3,9 @@
   border: 4px solid midnightblue;
   width: 400px;
   height: 300px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
 
 .box {
@@ -13,3 +16,4 @@
   width: 80px;
   height: 80px;
 }
+
