--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -7,10 +7,21 @@ img {
   height: 100px;
 }
 
+.imagewithtext {max-width: 200px; justify-content: center; text-align: center}
+
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
 }
+
+.images {display: flex;
+  gap: 52px;
+  justify-content: center;
+}
+
+.text {flex-wrap: wrap}
 
 /* do not edit this footer */
 .footer {
