--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,7 +20,19 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  gap: 1em;
+  padding: 1em;
 }
+
+.header {display: flex;
+justify-content: space-between;
+align-items: center;
+font-size: 20px;}
+
+.content {display: flex;
+flex-wrap: wrap;
+gap: 0.7em;}
 
 .icon {
   color: royalblue;
@@ -33,6 +45,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+  align-self: flex-start;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -43,11 +58,10 @@ body {
   font-size: 16px;
   height: 24px;
   width: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  display: flex;
+  justify-content: right;
 }
 
 button {
