--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -7,6 +7,25 @@ body {
   font-family: Roboto, sans-serif;
 }
 
+.flexy {display: flex; flex-direction: column; gap: 7em;}
+
+a {text-decoration: none; color: grey;}
+
+ul {list-style-type: none;}
+
+.header {display: flex; justify-content: space-between; margin-right: 20px; margin-left: -5px;
+padding: 10px;}
+
+.content {display: flex; flex-direction: column; justify-content: center; align-items: center;
+gap: 10px;}
+
+.footer {display: flex; justify-content: space-between; margin-right: 20px; margin-left: -5px;
+padding: 1px; background-color: #eeeeee;}
+
+.left-links {display: flex; gap: 15px;}
+
+.right-links {display: flex; gap: 15px;}
+
 img {
   width: 600px;
 }
@@ -16,6 +35,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
 }
 
 input {
